# quantification

./: .env  .gitignore  main.py  pyproject.toml  quantification.md  股票量化系统_MVP方案.md
backend/: __init__.py  config.py  errors.py  models.py  pipeline.py  scheduler.py  stock_pool.py
backend/data_collectors/: __init__.py  data_quality_checker.py  fundamental_collector.py  history_collector.py  quote_collector.py
backend/data_collectors/providers/: akshare_provider.py  base_provider.py  eastmoney_provider.py  (+3 more)
backend/db/: repository.py  schema.py
backend/factors/: common.py  crowding_factor.py  fundamental_factor.py  market_state_factor.py  money_factor.py  risk_factor.py  trend_factor.py
backend/reports/: daily_report.py  factor_report.py
backend/scoring/: score_engine.py
data/: concept_map_2026-04-29.json  concept_map_2026-04-30.json  market_cap_map_2026-04-29.json  market_cap_map_2026-04-30.json
docs/prd/: 股票量化系统_MVP修订版方案.md
docs/开发步骤/: 00_开发总览.md  01_Phase0_项目骨架.md  02_Phase1_因子评分.md  03_Phase2_市场状态与拥挤度.md  04_Phase3_资讯抓取与LLM结构化.md  05_Phase4_虚拟跑盘与基准对比.md  06_Phase5_策略快照与飞书推送.md  07_LLM与Agent角色设计.md  08_Agent输入输出关系表.md  09_LLM调用接口与返回Schema草案.md  10_数据源稳定性方案总结.md
docs/测试用例/: Phase0_项目骨架_测试用例.md  Phase1_因子评分_测试用例.md  Phase2_市场状态与拥挤度_测试用例.md
docs/测试约定/: Phase测试交付约定.md
tests/: akshare_concept_enrichment_checks.py  akshare_industry_enrichment_checks.py  akshare_market_cap_enrichment_checks.py  phase0_acceptance.py  phase1_acceptance.py  phase2_acceptance.py  provider_fallback_checks.py  stability_phase0_checks.py  tushare_stock_basic_reuse_checks.py
