[project]
name = "agent-by-quantification"
version = "0.1.0"
description = "Document-driven MVP scaffold for a stock quantification system."
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

